--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,6 +22,13 @@
     margin-top: 5px;
 }
 
+.result-elem-data
+{
+    text-transform: uppercase;
+    font-size: .7em;
+    font-family: Verdana;
+    color: #1010ff;
+}
 .result-elem-title
 {
     font-size: 1.5em;
